namespace java org.cs511.thrift

struct DummyThrift {
  1: i32 id,
  2: string name,
}