namespace java org.cs511.thrift

struct SingleThrift {
  1: string tconst,
  2: string rating,
}